--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres-user:
-    image: postgres:latest
+    image: postgres:17
     ports:
       - "5433:5432"
     environment:
@@ -15,6 +15,24 @@ services:
       timeout: 3s
       retries: 10
       start_period: 10s
+
+  user-service:
+    image: user-service:latest
+    build:
+      context: ./user_service
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000/user/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    depends_on:
+      postgres-user:
+        condition: service_healthy
+    restart: unless-stopped
 
 volumes:
   user_data:
