--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,21 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  api-gateway:
+    image: api-gateway:latest
+    build:
+      context: ./api_gateway
+      dockerfile: Dockerfile
+    ports:
+      - "3425:3425"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3425/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    restart:
+      unless-stopped
+
 volumes:
   user_data:
